--- a/Celulares.html
+++ b/Celulares.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>La Tiendita</title>
+  <title>Celulares</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -13,7 +13,7 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  <link rel="stylesheet" href="La Tiendita.css">
+  <link rel="stylesheet" href="Celulares.css">
 
 </head>
 
@@ -21,7 +21,7 @@
   <nav class="navbar bg-body-tertiary container-fluid m-0">
     <div class="container-fluid" width="100%">
 
-      <a class="navbar-brand justify-content-center mx-5" href="#">
+      <a class="navbar-brand justify-content-center mx-5" href="La Tiendita-Inicio.html">
         <img src="./Img_notebooks/Logo.jpg" alt="Logo" width="150">
       </a>
 
@@ -38,103 +38,6 @@
       </div>
     </div>
   </nav>
-
-
-
-
-  <div class="block">
-
-
-    <div class="top">
-      <ul>
-        <li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i></a></li>
-        <li><span class="converse">Asus</span></li>
-        <li><a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i>
-          </a></li>
-      </ul>
-    </div>
-
-    <div class="middle">
-      <img src="./Img_notebooks/Asus.webp" alt="Notebook Asus" />
-    </div>
-
-    <div class="bottom">
-      <div class="heading">Notebook Asus </div>
-      <div class="info">Zenbook </div>
-      <div class="style">14 pulgadas</div>
-      <div class="price">$1.500.000 <span class="old-price">$2.000.000</span></div>
-    </div>
-
-  </div>
-  <div class="block">
-
-    <div class="top">
-      <ul>
-        <li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i></a></li>
-        <li><span class="converse">Lenovo</span></li>
-        <li><a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i>
-          </a></li>
-      </ul>
-    </div>
-
-    <div class="middle">
-      <img src="Img_notebooks/Lenovo.webp" alt="pic" />
-    </div>
-
-    <div class="bottom">
-      <div class="heading">Notebook Lenovo</div>
-      <div class="info">ThinkPad</div>
-      <div class="style">15.6 Pulgadas</div>
-      <div class="price">$2.305.000 <span class="old-price">$2.45.000</span></div>
-    </div>
-
-  </div>
-  <div class="block">
-
-    <div class="top">
-      <ul>
-        <li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i></a></li>
-        <li><span class="converse">Acer</span></li>
-        <li><a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i>
-          </a></li>
-      </ul>
-    </div>
-
-    <div class="middle">
-      <img src="./Img_notebooks/Acer.webp" alt="pic" />
-    </div>
-
-    <div class="bottom">
-      <div class="heading">Notebook Acer</div>
-      <div class="info">Aspire</div>
-      <div class="style">15.6 Pulgadas</div>
-      <div class="price">$5.000.000</div>
-    </div>
-
-  </div>
-  <div class="block">
-
-    <div class="top">
-      <ul>
-        <li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i></a></li>
-        <li><span class="converse">Hp</span></li>
-        <li><a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i>
-          </a></li>
-      </ul>
-    </div>
-
-    <div class="middle">
-      <img src="./Img_notebooks/Hp.webp" alt="pic" />
-    </div>
-
-    <div class="bottom">
-      <div class="heading">Notebook HP</div>
-      <div class="info">Core Ultra</div>
-      <div class="style">16 pulgadas</div>
-      <div class="price">$3.400.000 <span class="old-price">$5.000.000</span></div>
-    </div>
-
-  </div>
   <div class="block">
 
     <div class="top">
@@ -145,7 +48,7 @@
           </a></li>
       </ul>
     </div>
-
+    
     <div class="middle">
       <img src="./Img_notebooks/Samsung.webp" alt="Samsung 50 Pro" />
     </div>
@@ -233,7 +136,6 @@
       <div class="col mb-0 text-white">La Tiendita</div>
     </div>
   </footer>
-
 
 
 
