--- a/Notebooks.html
+++ b/Notebooks.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>La Tiendita</title>
+  <title>Notebooks</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -134,97 +134,6 @@
       <div class="price">$3.400.000 <span class="old-price">$5.000.000</span></div>
     </div>
 
-  </div>
-  <div class="block">
-
-    <div class="top">
-      <ul>
-        <li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i></a></li>
-        <li><span class="converse">Motorola</span></li>
-        <li><a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i>
-          </a></li>
-      </ul>
-    </div>
-
-    <div class="middle">
-      <img src="./Img_notebooks/Samsung.webp" alt="Samsung 50 Pro" />
-    </div>
-
-    <div class="bottom">
-      <div class="heading">Celular Motorola </div>
-      <div class="info">50 Pro</div>
-      <div class="style">518 GB 6 RAM</div>
-      <div class="price">$1.200.000</div>
-    </div>
-
-  </div>
-  <div class="block">
-
-    <div class="top">
-      <ul>
-        <li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i></a></li>
-        <li><span class="converse">Samsung</span></li>
-        <li><a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i>
-          </a></li>
-      </ul>
-    </div>
-
-    <div class="middle">
-      <img src="./Img_notebooks/Samsung.webp" alt="Samsung A54" />
-    </div>
-
-    <div class="bottom">
-      <div class="heading">Celular Samsung</div>
-      <div class="info">A54</div>
-      <div class="style">256 GB 4 RAM </div>
-      <div class="price">$1.200.000</div>
-    </div>
-
-  </div>
-  <div class="block">
-
-    <div class="top">
-      <ul>
-        <li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i></a></li>
-        <li><span class="converse">Huawei</span></li>
-        <li><a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i>
-          </a></li>
-      </ul>
-    </div>
-
-    <div class="middle">
-      <img src="./Img_notebooks/Huawei.webp" alt="Huawei P40" />
-    </div>
-
-    <div class="bottom">
-      <div class="heading">Celular Huawei</div>
-      <div class="info">P40</div>
-      <div class="style">128 GB 4 RAM</div>
-      <div class="price">$800.000</div>
-    </div>
-
-  </div>
-  <div class="block">
-
-    <div class="top">
-      <ul>
-        <li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i></a></li>
-        <li><span class="converse">Iphone</span></li>
-        <li><a href="#"><i class="fa fa-shopping-basket" aria-hidden="true"></i>
-          </a></li>
-      </ul>
-    </div>
-
-    <div class="middle">
-      <img src="./Img_notebooks/Iphone.webp" alt="Iphone 14" />
-    </div>
-
-    <div class="bottom">
-      <div class="heading">Celular Iphone</div>
-      <div class="info">14</div>
-      <div class="style">128 GB 4 RAM</div>
-      <div class="price">$2.400.000 <span class="old-price">$2.500.000</span></div>
-    </div>
 
   </div>
 
